--- a/BlazorAuthTemplate/BlazorAuthTemplate.csproj
+++ b/BlazorAuthTemplate/BlazorAuthTemplate.csproj
@@ -9,11 +9,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorAuthTemplate.Client\BlazorAuthTemplate.Client.csproj" />
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7" />
+    <PackageReference Include="MimeKit" Version="4.7.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
