--- a/BlazorAuthTemplate/BlazorAuthTemplate.csproj
+++ b/BlazorAuthTemplate/BlazorAuthTemplate.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorAuthTemplate.Client\BlazorAuthTemplate.Client.csproj" />
+    <PackageReference Include="Bogus" Version="35.6.0" />
     <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.7" />
