--- a/BlazorAuthTemplate/BlazorAuthTemplate.csproj
+++ b/BlazorAuthTemplate/BlazorAuthTemplate.csproj
@@ -23,4 +23,7 @@
     <PackageReference Include="SendGrid" Version="9.29.3" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Include="Data\DemoImages\**\*.*" CopyToOutputDirectory ="PreserveNewest" />
+	</ItemGroup>
 </Project>
